--- a/index.html
+++ b/index.html
@@ -14,50 +14,56 @@
 
 <script>
 	// JavaScript code goes here
-    var canvas = document.getElementById("myCanvas");
-    var ctx = canvas.getContext("2d");
+    const canvas = document.getElementById("myCanvas");
+    const ctx = canvas.getContext("2d");
 
-    var x = canvas.width/2;
-    var y = canvas.height-30;
+    let x = canvas.width/2;
+    let y = canvas.height-30;
 
-    var ballRadius = 10;
+    const ballRadius = 10;
 
-    var dx = 2;
-    var dy = -2;
+    let dx = 2;
+    let dy = -2;
 
-    var paddleHeight = 10;
-    var paddleWidth = 75;
-    var paddleX = (canvas.width-paddleWidth) / 2;
+    const paddleHeight = 10;
+    const paddleWidth = 75;
+    let paddleX = (canvas.width-paddleWidth) / 2;
 
-    var rightPressed = false;
-    var leftPressed = false;
+    const rightPressed = false;
+    const leftPressed = false;
 
-    var brickRowCount = 3;
-    var brickColumnCount = 5;
-    var brickWidth = 75;
-    var brickHeight = 20;
-    var brickPadding = 10;
-    var brickOffsetTop = 30;
-    var brickOffsetLeft = 30;
+    const brickRowCount = 3;
+    const brickColumnCount = 5;
+    const brickWidth = 75;
+    const brickHeight = 20;
+    const brickPadding = 10;
+    const brickOffsetTop = 30;
+    const brickOffsetLeft = 30;
 
-    var score = 0;
-    var lives = 3;
+    let score = 0;
+    let lives = 3;
 
     var brickX = (c*(brickWidth+brickPadding))+brickOffsetLeft;
     var brickY = (r*(brickHeight+brickPadding))+brickOffsetTop;
 
-    var bricks = [];
+    function randomHslaColors () {
+        const hue = Math.random() * 360;
+        return `hsla(${hue}, 100%, 30%, 0.7)`
+    }
+
+    const bricks = [];
     for(var c=0; c<brickColumnCount; c++) {
         bricks[c] = [];
         for(var r=0; r<brickRowCount; r++) {
-            bricks[c][r] = { x: 0, y: 0, status: 1 };
+            color = randomHslaColors();
+            bricks[c][r] = { x: 0, y: 0, status: 1, color: color};
         }
     }
 
     function collisionDetection() {
-        for(var c=0; c<brickColumnCount; c++) {
-            for(var r=0; r<brickRowCount; r++) {
-                var b = bricks[c][r];
+        for(let c=0; c<brickColumnCount; c++) {
+            for(let r=0; r<brickRowCount; r++) {
+                const b = bricks[c][r];
                 if(b.status == 1) {
                     if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight) {
                         dy = -dy;
@@ -125,22 +131,22 @@
     function drawPaddle() {
         ctx.beginPath();
         ctx.rect(paddleX, canvas.height-paddleHeight, paddleWidth, paddleHeight);
-        ctx.fillStyle = "#0095DD";
+        ctx.fillStyle = "#FF95DD";
         ctx.fill();
         ctx.closePath();
     }
 
     function drawBricks() {
-        for(var c=0; c<brickColumnCount; c++) {
-            for(var r=0; r<brickRowCount; r++) {
+        for(let c=0; c<brickColumnCount; c++) {
+            for(let r=0; r<brickRowCount; r++) {
                 if(bricks[c][r].status == 1) {
-                    var brickX = (c*(brickWidth+brickPadding))+brickOffsetLeft;
-                    var brickY = (r*(brickHeight+brickPadding))+brickOffsetTop;
+                    const brickX = (c*(brickWidth+brickPadding))+brickOffsetLeft;
+                    const brickY = (r*(brickHeight+brickPadding))+brickOffsetTop;
                     bricks[c][r].x = brickX;
                     bricks[c][r].y = brickY;
                     ctx.beginPath();
                     ctx.rect(brickX, brickY, brickWidth, brickHeight);
-                    ctx.fillStyle = "#0095DD";
+                    ctx.fillStyle = bricks[c][r].color;
                     ctx.fill();
                     ctx.closePath();
                 }
