--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         bricks[c] = [];
         for(var r=0; r<brickRowCount; r++) {
             color = randomHslaColors();
-            bricks[c][r] = { x: 0, y: 0, status: 1, color: color};
+            bricks[c][r] = { x: 0, y: 0, status: 3, color: color};
         }
     }
 
@@ -64,10 +64,11 @@
         for(let c=0; c<brickColumnCount; c++) {
             for(let r=0; r<brickRowCount; r++) {
                 const b = bricks[c][r];
-                if(b.status == 1) {
+                if(b.status >= 1) {
                     if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight) {
                         dy = -dy;
-                        b.status = 0;
+                        // b.status = 0;
+                        b.status--
                         score++;
                         if(dx > 1) {
                             dx = dx + .25
@@ -149,7 +150,7 @@
     function drawBricks() {
         for(let c=0; c<brickColumnCount; c++) {
             for(let r=0; r<brickRowCount; r++) {
-                if(bricks[c][r].status == 1) {
+                if(bricks[c][r].status >= 1) {
                     const brickX = (c*(brickWidth+brickPadding))+brickOffsetLeft;
                     const brickY = (r*(brickHeight+brickPadding))+brickOffsetTop;
                     bricks[c][r].x = brickX;
